--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <head>
-        <link rel="stylesheet" href="css/custom.css">
-        <link rel="stylesheet" href="css/extra.css">
+        <link rel="stylesheet" href="/css/custom.css">
+        <link rel="stylesheet" href="/css/extra.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-        <script src="js/jquery-3.6.0.min.js"></script>
-        <script src="js/bootstrap.bundle.js"></script>
+        <script src="/js/jquery-3.6.0.min.js"></script>
+        <script src="/js/bootstrap.bundle.js"></script>
         <script>
             $(function(){
-              $("#includedContent").load("sidebar.html");
+              $("#includedContent").load("components/sidebar.html");
             });
         </script>
     </head>
@@ -27,13 +27,13 @@
                 <div class="row justify-content-center">
                     <div class="col-md-4 col-sm-10 gy-4" style="align">
                         <div class="card">
-                            <img src="sample_images/card_image1.jpg" class="card-img-top" alt="...">
+                            <img src="/sample_images/card_image1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Module 1</h5>
                                 <p class="card-text">The need to eat sustainable foods and Impact of food on the environment</p>
                                 <div class="row justify-content-around">
                                     <div class="col-auto gy-2">
-                                        <a href="#" class="btn btn-primary">Go to Module</a>
+                                        <a href="pages/module1.html" class="btn btn-primary">Go to Module</a>
                                     </div>
                                     <div class="col-auto gy-2">
                                         <a href="#" class="btn btn-secondary">Take the test</a>
@@ -44,13 +44,13 @@
                     </div>
                     <div class="col-md-4 col-sm-10 gy-4">
                         <div class="card">
-                            <img src="sample_images/card_image2.jpg" class="card-img-top" alt="...">
+                            <img src="/sample_images/card_image2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Module 2</h5>
                                 <p class="card-text">Sustainable Foods - What is out there?</p>
                                 <div class="row justify-content-around">
                                     <div class="col-auto gy-2">
-                                        <a href="#" class="btn btn-primary">Go to Module</a>
+                                        <a href="pages/module2.html" class="btn btn-primary">Go to Module</a>
                                     </div>
                                     <div class="col-auto gy-2">
                                         <a href="#" class="btn btn-secondary">Take the test</a>
@@ -61,13 +61,13 @@
                     </div>
                     <div class="col-md-4 col-sm-10 gy-4">
                         <div class="card">
-                            <img src="sample_images/card_image3.jpg" class="card-img-top" alt="...">
+                            <img src="/sample_images/card_image3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Module 3</h5>
                                 <p class="card-text">Insect Proteins - How are they farmed?</p>
                                 <div class="row justify-content-around">
                                     <div class="col-auto gy-2">
-                                        <a href="#" class="btn btn-primary">Go to Module</a>
+                                        <a href="pages/module3.html" class="btn btn-primary">Go to Module</a>
                                     </div>
                                     <div class="col-auto gy-2">
                                         <a href="#" class="btn btn-secondary">Take the test</a>
