fixing path errors

--- a/module2.html
+++ b/module2.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <head>
-        <link rel="stylesheet" href="/css/custom.css">
-        <link rel="stylesheet" href="/css/extra.css">
+        <link rel="stylesheet" href="css/custom.css">
+        <link rel="stylesheet" href="css/extra.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-        <script src="/js/jquery-3.6.0.min.js"></script>
-        <script src="/js/bootstrap.bundle.js"></script>
+        <script src="js/jquery-3.6.0.min.js"></script>
+        <script src="js/bootstrap.bundle.js"></script>
         <script>
             $(function(){
-              $("#includedContent").load("../components/sidebar.html");
+              $("#includedContent").load("sidebar.html");
             });
         </script>
     </head>
@@ -20,7 +20,7 @@
                 <div class="row justify-content-center">
                     <div class="col-auto">
                         <div class="page-header">
-                            <h1>This is Module 1</h1>
+                            <h1>This is Module 2</h1>
                         </div>
                     </div>
                 </div>
