--- a/sidebar.html
+++ b/sidebar.html
@@ -8,7 +8,7 @@
         <div class="vertical-bar"></div>
     </div>
     <div class="col-auto">
-    <a href="/index.html" style="text-decoration: none;">
+    <a href="index.html" style="text-decoration: none;">
         DINE Lab, RMIT University
     </a>
     </div>
@@ -31,7 +31,7 @@
                     <div class="accordion-body">
                         <div class="row justify-content-around">
                             <div class="col-auto gy-2">
-                                <a href="/pages/module1.html" class="btn btn-primary">Go to Module</a>
+                                <a href="module1.html" class="btn btn-primary">Go to Module</a>
                             </div>
                             <div class="col-auto gy-2">
                                 <a href="#" class="btn btn-secondary">Take the test</a>
@@ -50,7 +50,7 @@
                     <div class="accordion-body">
                         <div class="row justify-content-around">
                             <div class="col-auto gy-2">
-                                <a href="/pages/module2.html" class="btn btn-primary">Go to Module</a>
+                                <a href="module2.html" class="btn btn-primary">Go to Module</a>
                             </div>
                             <div class="col-auto gy-2">
                                 <a href="#" class="btn btn-secondary">Take the test</a>
@@ -69,7 +69,7 @@
                     <div class="accordion-body">
                         <div class="row justify-content-around">
                             <div class="col-auto gy-2">
-                                <a href="/pages/module3.html" class="btn btn-primary">Go to Module</a>
+                                <a href="module3.html" class="btn btn-primary">Go to Module</a>
                             </div>
                             <div class="col-auto gy-2">
                                 <a href="#" class="btn btn-secondary">Take the test</a>
