working on first 2 modules

--- a/index.html
+++ b/index.html
@@ -25,12 +25,22 @@
                     </div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-md-4 col-sm-10 gy-4" style="align">
+                    <div class="col-auto gy-4">
+                        <div class="page-paragraph">
+                            <h2>Why do we need to eat sustainably?</h2>
+                            <p>
+                                Climate change is a common topic of conversation and we hear the need to alter our ways in order to improve (and save!) our planet ... but what exactly can we do? Included in this website are three modules: The impact of our Western diets, sustainable food choices, and alternative proteins. It will take you about 15 to 20 minutes to go through these activities, and by the end you'll know the impact of your current diet choices and the potential you hold to make improved, sustainable, nutritious, and delicious food choices!
+
+                                Our friends Jordy, Clive, Brianna, and Alexis will also be learning about the impact of their diets as you do. Do you make similar food choices to them? Is there something you can learn from them? Let's find out!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-4 col-sm-10 gy-4">
                         <div class="card">
                             <img src="sample_images/card_image1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Module 1</h5>
-                                <p class="card-text">The need to eat sustainable foods and Impact of food on the environment</p>
+                                <h5 class="card-title">The impacts of our Western diets</h5>
                                 <div class="row justify-content-around">
                                     <div class="col-auto gy-2">
                                         <a href="module1.html" class="btn btn-primary">Go to Module</a>
@@ -46,8 +56,7 @@
                         <div class="card">
                             <img src="sample_images/card_image2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Module 2</h5>
-                                <p class="card-text">Sustainable Foods - What is out there?</p>
+                                <h5 class="card-title">Sustainable Food Choices</h5>
                                 <div class="row justify-content-around">
                                     <div class="col-auto gy-2">
                                         <a href="module2.html" class="btn btn-primary">Go to Module</a>
@@ -63,8 +72,7 @@
                         <div class="card">
                             <img src="sample_images/card_image3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Module 3</h5>
-                                <p class="card-text">Insect Proteins - How are they farmed?</p>
+                                <h5 class="card-title">Alternative Proteins</h5>
                                 <div class="row justify-content-around">
                                     <div class="col-auto gy-2">
                                         <a href="module3.html" class="btn btn-primary">Go to Module</a>
