--- a/module1.html
+++ b/module1.html
@@ -20,7 +20,21 @@
                 <div class="row justify-content-center">
                     <div class="col-auto">
                         <div class="page-header">
-                            <h1>This is Module 1</h1>
+                            <h1>The impacts of our Western diets</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-auto gy-4">
+                        <div class="page-paragraph">
+                            <h2>Sustainable Eating</h2>
+                            <p>
+                                What foods we decide to eat has an impact on not only our health, but also our environment. So ... improving the quality of our diet, and also reducing environmental impact, is a major focus all over the world (1).
+                            </p>
+                            <h2>The Western Diet</h2>
+                            <p>
+                                The “Western diet” is the commonly adopted diet nowadays. This diet includes a high intake of refined carbohydrates (like pasta, white rice, and pastries), added sugar, sodium, and animal products, paired with a low intake of fruits, vegetables, and whole grains.
+                            </p>
                         </div>
                     </div>
                 </div>
