--- a/module2.html
+++ b/module2.html
@@ -20,7 +20,57 @@
                 <div class="row justify-content-center">
                     <div class="col-auto">
                         <div class="page-header">
-                            <h1>This is Module 2</h1>
+                            <h1>Sustainable Food Choices</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-auto gy-4">
+                        <div class="page-paragraph-alt">
+                            <p>
+                                Switching from a “Western Diet”, full of refined carbohydrates, animal products, and sugar, to a “healthier” and “higher quality” diet can help reduce water use, cropland use, as well as decrease the production of greenhouse gases. A “healthy” and “high-quality” diet is hard to pin point as there is no “one size fits all” approach. The Food and Agriculture Organization describes the concept of sustainable diets as nutritionally adequate, healthy, safe, affordable, with a low environmental impact. By shifting away from the “Western Diet” to a diet with a low environmental impact, it has been shown that we can make a significant reduction in the amount of GHG we produce, as well as our use of land and water (9, 16).
+                            </p>
+                            <h2>What foods have a "low environmental impact"?</h2>
+                            <p>
+                                The first thought to an “environmentally friendly diet” is usually a plant-based diet, such as vegetarian or vegan diets. Although plant-based diets are a generally sustainable approach, they are not always the answer. Meat can come in varying levels of sustainability and can ultimately have the same environmental impact as some plant-based food items. For example, the water used per calorie of nuts, fruits, and vegetables has found to be higher than various animal-based food items (16). Meat also offers a highly nutritious food product that is associated with many social and cultural traditions and cutting meat out of a diet completely may not be feasible for some (17).
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-auto gy-4">
+                        <div class="card">
+                            <img src="sample_images/module2img1.png" alt="...">
+                            <div class="card-body annotation">
+                                <span>Figure 2. List of common foods and their environmental impact in terms of greenhouse gases produced per kilogram of food (18)</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-auto gy-4">
+                        <div class="page-paragraph">
+                            <p>
+                                Overall, a sustainable diet can be achieved without the complete exclusion of animal-based products. For example, by reducing daily red meat consumption to 2 - 3 days a week, or a swap to meat that generates far less GHG emissions such as chicken, you can play a major part in sustainable eating (12). This is what is known as a “flexitarian” approach, where animal-based food products are eaten on occasion and majority of the diet is centered around plant-based foods. The flexitarian diet offers a diet pattern that is not restricting, allowing those who partake to enjoy animal-based products and meat from time to time, while also providing a healthy and nutritionally adequate diet that has a low environmental impact (17).
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 gy-4">
+                        <div class="card">
+                            <img src="sample_images/module2img2.jpg" alt="...">
+                            <div class="card-body annotation">
+                                <span>Image of rice cakes with salmon, cucumber, and red onion</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 gy-4">
+                        <div class="card">
+                            <img src="sample_images/module2img3.jpg" alt="...">
+                            <div class="card-body annotation">
+                                <span>Image of a spread of food including salad, greens, and meat</span>
+                            </div>
                         </div>
                     </div>
                 </div>
