--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <img src="sample_images/card_image1.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">The impacts of our Western diets</h5>
-                                <div class="row justify-content-around">
+                                <div class="row justify-content-between">
                                     <div class="col-auto gy-2">
                                         <a href="module1.html" class="btn btn-primary">Go to Module</a>
                                     </div>
@@ -57,7 +57,7 @@
                             <img src="sample_images/card_image2.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Sustainable Food Choices</h5>
-                                <div class="row justify-content-around">
+                                <div class="row justify-content-between">
                                     <div class="col-auto gy-2">
                                         <a href="module2.html" class="btn btn-primary">Go to Module</a>
                                     </div>
@@ -73,7 +73,7 @@
                             <img src="sample_images/card_image3.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Alternative Proteins</h5>
-                                <div class="row justify-content-around">
+                                <div class="row justify-content-between">
                                     <div class="col-auto gy-2">
                                         <a href="module3.html" class="btn btn-primary">Go to Module</a>
                                     </div>
