--- a/module1.html
+++ b/module1.html
@@ -38,6 +38,62 @@
                         </div>
                     </div>
                 </div>
+                <div class="row justify-content-center">
+                    <div class="col-auto gy-4">
+                        <div class="page-paragraph-alt">
+                            <div class="row justify-content-center">
+                                <div class="col-auto gy-4">
+                                    <img src="sample_images/module1img1.jpg" class="img-fluid" alt="..." style="max-height: 30vh">
+                                </div>
+                                <div class="col-auto gy-4">
+                                    <img src="sample_images/module1img2.jpg" class="img-fluid" alt="..." style="max-height: 30vh">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-xl-9 gy-4">
+                        <div class="page-paragraph">
+                            <h5>Let's have a look at the current diets of our friends Jordy, Clive, Brianna, and Alexis.</h5>
+                        </div>
+                        <div class="col-auto gy-4">
+                            <div id="carouselExampleIndicators" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                                <div class="carousel-indicators">
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 3"></button>
+                                </div>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="sample_images/module1img3.png" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="sample_images/module1img4.png" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="sample_images/module1img5.png" class="d-block w-100" alt="...">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="sample_images/module1img6.png" class="d-block w-100" alt="...">
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="page-paragraph">
+                            <p>Jordy is a classic example of the Western diet, full of refined carbs like white rice and a high intake of red meat, paired with a small amount of fresh vegetables. This kind of diet presents challenges for both the health of the population and environmental sustainability. In terms of sustainability, it is a major contributor to environmental burdens including greenhouse gas emissions and land use (1). By including some simple swaps into your diet, such as Clive consuming chicken rather than red meat, he saves a whopping 2,323kg of greenhouse gas production each year.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="includedContent"></div>
