--- a/sidebar.html
+++ b/sidebar.html
@@ -24,12 +24,12 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                        Module 1: The need to eat sustainable foods and impact of food on the environment
+                        <h5>The impacts of our Western diets</h5>
                     </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <div class="row justify-content-around">
+                        <div class="row justify-content-end">
                             <div class="col-auto gy-2">
                                 <a href="module1.html" class="btn btn-primary">Go to Module</a>
                             </div>
@@ -43,12 +43,12 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        Module 2: Sustainable foods - What is out there?
+                        <h5>Sustainable Food Choices</h5>
                     </button>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <div class="row justify-content-around">
+                        <div class="row justify-content-end">
                             <div class="col-auto gy-2">
                                 <a href="module2.html" class="btn btn-primary">Go to Module</a>
                             </div>
@@ -62,12 +62,12 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        Module 3: Insect proteins - How are they farmed?
+                        <h5>Alternative Proteins</h5>
                     </button>
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        <div class="row justify-content-around">
+                        <div class="row justify-content-end">
                             <div class="col-auto gy-2">
                                 <a href="module3.html" class="btn btn-primary">Go to Module</a>
                             </div>
